# Embedded-Linux

AdminLinux_Task1/: Day1_questions  oldpasswd
AdminLinux_Task10/: FileActions.cpp
AdminLinux_Task2/: Readme.md  main.c  result
AdminLinux_Task3/: Day3_submission  redirection  script.sh
AdminLinux_Task4/: a  main.c
AdminLinux_Task5/: receiver.c  sender.c
AdminLinux_Task5/exe/: receiver  sender
AdminLinux_Task7/: tcp_client.py  tcp_server.py
AdminLinux_Task9/: GPIO.cpp  GPIO.h  std_types.h
Task11/: GPIO.cpp  GPIO.h  app  main.cpp
Task12/: UART.cpp  UART.hpp  app  main.cpp
Task13/: CMakeLists.txt  toolchain-rpi3-aarch64.cmake
Task13/app/: main.cpp
Task13/build-rpi/: CMakeCache.txt  Makefile  SevenSegment  cmake_install.cmake
Task13/inc/: 7segment.hpp  IOstream.hpp  Istream.hpp  Ostream.hpp  Stream.hpp
Task13/src/: 7segment.cpp  CMakeLists.txt  GPIO.cpp  IOstream.cpp  Istream.cpp  Ostream.cpp  Stream.cpp
